[project]
name = "example-package-martynawitkowska"
description = "Example! Hey!"
readme = "README.md"
authors = [
    { name = "Martyna Witkowska", email = "mar.witkowska@gmail.com" }
]
requires-python = ">=3.13"
version = "0.1.1"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: iOS",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

keywords = ["pdf", "jupyter"]

dependencies = [
    "reportlab>=4.4.2",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/martynawitkowska/example_package"
Issues = "https://github.com/martynawitkowska/example_package/issues"


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"


